k8s/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod2
  labels:
    app: webserver
spec:
  containers:
  - name: nginx
    image: nginx:latest
    ports:
    - containerPort: 80
    volumeMounts:
    - name: conf-volume
      mountPath: /etc/nginx/conf.d
  volumes:
  - name: conf-volume
    configMap:
      name: nginx-conf
      items:
      - key: aspnetcore.conf
        path: test.conf
