k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  type: NodePort
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
    nodePort: 32000
  selector:
    app: my-deployment
